--- a/index.html
+++ b/index.html
@@ -1465,7 +1465,7 @@ or even used to manipulate behaviour and thus reduce [=autonomy=].
   notifications (for example, disallowing sites from requesting permission on first visit).
   
   <span class="practicelab" id="principle-notifications-context">Web [=sites=] should use notifications
-    only for information that their users have spedcifically requested.
+    only for information that their users have specifically requested.
   </span>
   
   Web [=sites=] should tell their users what specific kind of information they can expect to 
