--- a/index.html
+++ b/index.html
@@ -1468,7 +1468,7 @@ or even used to manipulate behaviour and thus reduce [=autonomy=].
     only for information that their users have specifically requested.
   </span>
   
-  Web [=sites=] should tell their users what specific kind of information they can expect to 
+  Web [=sites=] should tell their users what specific kind of information people can expect to 
   receive, and how notifications can be turned off,  when requesting permission to send interruptive 
   notifications.  Web [=sites=] should not request permission to send notifications on first visit.
   Permissions should be requested in [=context=].
