--- a/index.html
+++ b/index.html
@@ -635,7 +635,9 @@ TAG's resolution on a [Strong and Secure Web Platform](https://www.w3.org/blog/2
 to ensure that "<i>broad testing and audit continues to be possible</i>" where
 [=information flows=] and automated decisions are involved.
 
-Such transparency can only function if there are strong [rights](#data-rights) of access to data (including data
+Such transparency can only function if there are strong
+<!-- [rights](#data-rights) --> rights
+of access to data (including data
 derived from one's personal data) as well as mechanisms to explain the outcomes of automated
 decisions.
 
@@ -1024,12 +1026,27 @@ of an event that occurs nearly-simultaneously on both sites.
 ## Principles for Personal Data {#data}
 
 <aside class="issue">
-  <h4>Pete's Funtime Reference Corral</h4>
+<h4>Pete's Funtime Reference Corral</h4>
+
+* <dfn data-lt="data">personal data</dfn>
+* <dfn data-lt="data processor">service provider</dfn>
+* <dfn data-export="">right to access</dfn>
+* <dfn data-export="" data-lt="right to erase">right to erase</dfn>
+* <dfn data-export="" data-lt="right to portability" data-local-lt="portability">right to port</dfn>
+* <dfn data-export="">right to correct</dfn>
+* <dfn data-export="">right to be free from automated decision-making</dfn>
+* <dfn data-export="" data-lt="right to object|right to withdraw consent|right to restrict use">right to object, withdraw consent, and restrict use</dfn>
+* <dfn>de-identified</dfn>
+* [=third party=]
+* [[?Privacy-Concerned]]
+
 </aside>
 
 <aside class="issue">
   This section has not been edited for narrative.
 </aside>
+
+<div class="practice">
 
 <p><span class="practicelab" id="user-agent-data-sharing">
 User agents should only share and present information about the user that
@@ -1039,20 +1056,28 @@ longer the chain of reasoning used to justify data collection, the less likely f
 collection to be ethical and principled.
 </span></p>
 
+</div>
+
 Examples:
 
- - Sharing geo-location data with a map website after a user has clicked a "share my location" button has
-   a small number of "hops" between intent and data.
- - Sharing information about the user's selected DNS resolver with a site, so that the site authors can debug
-   possible issues around tail/uncommon resolvers, has a large number of "hops" between user intent (to do
-   a thing on the website) and collection motivation (users like our site, so users will want to share information
-   with us to help us improve the site).
+* Sharing geo-location data with a map website after a user has clicked a "share my location" button has
+  a small number of "hops" between intent and data.
+* Sharing information about the user's selected DNS resolver with a site, so that the site authors can debug
+  possible issues around tail/uncommon resolvers, has a large number of "hops" between user intent (to do
+  a thing on the website) and collection motivation (users like our site, so users will want to share information
+  with us to help us improve the site).
+
+<div class="practice">
 
 <p><span class="practicelab" id="sensitive-vs-non-sensitive-data">
 User agents should generally not attempt to distinguish between sensitive and nonsensitive personal data; all
 data and personal information is likely to be sensitive to some users, often in ways unanticipated by
 browser vendors and site operators.
 </span></p>
+
+</div>
+
+<div class="practice">
 
 <p><span class="practicelab" id="minimal-data-sharing">
 User agents should always aim to share the minimal amount of information with a site
@@ -1061,127 +1086,6 @@ unanticipated ways in the future to enact privacy harms, even data that seems un
 be identifying, sensitive or otherwise privacy-harming.
 </span></p>
 
-<<<<<<< HEAD
-A <dfn>data controller</dfn> is a [=party=] that determines the [=means=] and [=purposes=]
-of data processing. Any [=party=] that is not a [=service provider=] is a [=data controller=].
-
-### Techniques {#data-techniques}
-
-The <dfn>Vegas Rule</dfn> is a simple implementation of privacy in which "<i>what happens with the
-[=first party=] stays with the [=first party=]</i>." Put differently, the [=Vegas Rule=] is followed
-when the [=first party=] is the only [=data controller=]. While the [=Vegas Rule=] is a good
-guideline, it's neither necessary nor sufficient for [=appropriate=] [=data processing=]. A [=first
-party=] that maintains exclusive access to a person's data can still [=process=] it
-[=inappropriately=], and there are cases where a third party can learn information about a person
-but still treat it [=appropriately=].
-
-#### De-identification
-
-Data is <dfn>de-identified</dfn> when there exists a high level of confidence
-that no [=person=] described by the data can be identified, directly or indirectly
-(e.g. via association with an [=identifier=], user agent, or device), by that data alone or in
-combination with other available information. Note
-that further considerations relating to groups are covered in the
-<a href="#collective">Collective Issues in Privacy</a> section.
-
-We talk of <dfn>controlled de-identified data</dfn> when there are strict controls that prevent the
-re-identification of [=people=] described by the data except for a well-defined set of [=purposes=].
-
-Different situations involving [=controlled de-identified data=] will require different controls. For instance,
-if the [=controlled de-identified data=] is <em>only</em> being processed by one [=party=], typical controls
-include making sure that the [=identifiers=] used in the data are unique to that dataset, that
-any person (e.g. an employee of the [=party=]) with access to the [=data=] is barred (e.g. based on
-legal terms) from sharing the [=data=] further, and that technical measures exist to prevent
-re-identification or the joining of different data sets involving this [=data=], notably against
-timing or k-anonymity attacks.
-
-In general, the goal is to ensure that [=controlled de-identified data=] is used in a manner that provides a
-viable degree of oversight and accountability such that technical and procedural means to guarantee
-the maintenance of pseudonymity are preserved.
-
-This is more difficult when the [=controlled de-identified data=] is shared between several [=parties=]. In such
-cases, good examples of typical controls that are representative of best practices would include
-making sure that:
-
-* the [=identifiers=] used in the [=data=] are under the direct and exclusive control of
-  the [=first party=] who is prevented by strict controls from matching the identifiers with the
-  data;
-
-* when these [=identifiers=] are shared with a [=third party=], they are made unique
-  to that [=third party=] such that if they are shared with more than one
-  [=third party=] these cannot then match them up with one another;
-
-* there is a strong level of confidence that no [=third party=] can match the [=data=]
-  with any data other than that obtained through interactions with the [=first
-  party=];
-
-* any [=third party=] receiving such [=data=] is barred (eg. based on legal terms)
-  from sharing it further;
-
-* technical measures exist to prevent re-identification or the joining of
-  different data sets involving this [=data=], notably against timing or
-  k-anonymity attacks; and
-
-* there exist contractual terms between the [=first party=] and [=third party=]
-  describing the limited [=purpose=] for which the data is being shared.
-
-Note that [=controlled de-identified data=], on its own, is not sufficient to render [=data processing=]
-[=appropriate=].
-
-### Rights {#data-rights}
-
-[=People=] retain certain rights over data about themselves, and these rights should be facilitated
-by their [=user agent=] and the [=parties=] they're interacting with. While data rights alone are
-not sufficient to satisfy all [=privacy=] principles for the Web, they do support self-determination
-and help improve accountability. Such rights include:
-
-* The <dfn data-export="">right to access</dfn> [=data=] about oneself.
-
-This right includes being able to discover data about oneself (implying no databases are kept
-secret) and to review
-what information has been collected or inferred.
-
-* The <dfn data-export="" data-lt="right to erase">right to erase</dfn> [=data=] about oneself.
-
-The right to erase applies whether or not terminating use of a service altogether, though what
-[=data=] can be erased may differ between those two cases. On the Web, [=people=] may wish to erase
-data on their device, on a server, or both, and the distinctions may not always be clear.
-
-* The <dfn data-export="" data-lt="right to portability" data-local-lt="portability">right to
-port</dfn> [=data=], including data one has stored with a [=party=], so it can easily be reused or
-transferred elsewhere.
-
-Portability is needed to realize the ability for [=people=] to make choices about services with
-different data practices. Standards for interoperability are essential for effective re-use.
-
-* The <dfn data-export="">right to correct</dfn> [=data=] about oneself, to ensure that one's
-[=identity=] is properly reflected in a system.
-
-* The <dfn data-export="">right to be free from automated decision-making</dfn> based on [=data=]
-about oneself.
-
-For some kinds of decision-making with substantial consequences, there is a privacy interest in
-being able to exclude oneself from automated profiling. For example, some services may alter the
-price of products (price discrimination) or offers for credit or insurance based on [=data=]
-collected about a person. Those alterations may be consequential (financially, say) and
-objectionable to people who believe those decisions based on data about them are inaccurate or
-unjust. As another example, some services may draw inferences about a user's identity, humanity or
-presence based on facial recognition algorithms run on camera data. Because facial recognition
-algorithms and training sets are fallible and may exhibit certain biases, people may not wish to
-submit to decisions based on that kind of automated recognition.
-
-* The <dfn data-export=""
-  data-lt="right to object|right to withdraw consent|right to restrict use">right to object,
-withdraw consent, and restrict use</dfn> of data about oneself.
-
-[=People=] may change their decisions about consent or may object to subsequent uses of data about
-themselves. Retaining rights requires ongoing control, not just at the time of collection.
-
-The OECD Privacy Principles [[OECD-Guidelines]], [[Records-Computers-Rights]], and the [[GDPR]],
-among other places, include many of the rights [=people=] have as data subjects. These participatory
-rights by people over data about themselves are inherent to [=autonomy=].
-=======
->>>>>>> e824a4e (merging and flattening 2.2 and 2.4)
 
 ## Principles for Sensitive Information {#hl-sensitive-information}
 
