--- a/index.html
+++ b/index.html
@@ -1498,6 +1498,7 @@ allowed to do so without the [=party=] retaliating, for instance by artificially
 unrelated feature, by decreasing the quality of the service, or by trying to cajole, badger, or
 trick the [=person=] into opting back into the [=processing=].
 
+<aside class="issue">Some services have the user pay for their use in data. These services aren't necessarily retaliating by denying their services to users who refuse to pay with data, but the details are more complex than we've had time to write.</aside>
 <!--
 # EVERYTHING BELOW THIS LINE IS MATERIAL
 
