--- a/index.html
+++ b/index.html
@@ -1554,12 +1554,13 @@ the core concepts of that domain combine into a [=user=]-comprehensible [=party=
 definitions are likely to differ between domains.
 
 [=User agents=] tend to explain to [=people=] which [=origin=] or [=site=] provided the
-web page they're looking at. The [=party=] that controls this [=origin=] or [=site=] is
+web page they're looking at. The [=party=] that controls the use of information collected on an [=origin=] or [=site=] is
 known as the web page's <dfn data-dfn-for="page">first party</dfn>. When a [=person=]
 interacts with a UI element on a web page, the <dfn>first party</dfn> of that interaction
 is usually the web page's [=page/first party=]. However, if a different [=party=] controls
-the UI element, and a reasonable person with a realistic cognitive budget would realize
-that this other [=party=] controls the UI element they're interacting with, this other
+how data collected with
+the UI element is used, and a reasonable person with a realistic cognitive budget would realize
+that this other [=party=] has this control, this other
 [=party=] is the [=first party=] for the interaction instead.
 
 The [=first party=] to an interaction is accountable for the processing of data produced
