add controller to the acting defs

--- a/index.html
+++ b/index.html
@@ -1470,6 +1470,9 @@ level and not necessarily all the way down to implementation details. Example:
 <em>a person will have their preferences restored (purpose) by looking up their identifier
 in a preferences store (means)</em>.
 
+A <dfn>data controller</dfn> is a [=party=] that determines the [=means=] and [=purposes=]
+of data processing. Any [=party=] that is not a [=service provider=] is a [=data controller=].
+
 </section>
 
 <section class="appendix">
