--- a/index.html
+++ b/index.html
@@ -1086,6 +1086,7 @@ unanticipated ways in the future to enact privacy harms, even data that seems un
 be identifying, sensitive or otherwise privacy-harming.
 </span></p>
 
+</div>
 
 ## Principles for Sensitive Information {#hl-sensitive-information}
 
