--- a/index.html
+++ b/index.html
@@ -1034,12 +1034,6 @@ of an event that occurs nearly-simultaneously on both sites.
 
 * <dfn data-lt="data">personal data</dfn>
 * <dfn data-lt="data processor">service provider</dfn>
-* <dfn data-export="">right to access</dfn>
-* <dfn data-export="" data-lt="right to erase">right to erase</dfn>
-* <dfn data-export="" data-lt="right to portability" data-local-lt="portability">right to port</dfn>
-* <dfn data-export="">right to correct</dfn>
-* <dfn data-export="">right to be free from automated decision-making</dfn>
-* <dfn data-export="" data-lt="right to object|right to withdraw consent|right to restrict use">right to object, withdraw consent, and restrict use</dfn>
 * [=third party=]
 * [[?Privacy-Concerned]]
 
@@ -1131,13 +1125,74 @@ a person, consider at least these factors:
 Issue(16): This description of what makes information sensitive still needs to
 be refined.
 
+## Data Rights {#data-rights}
+
+<p>
+  <span class="practicelab" id="respect-data-rights">
+    [=People=] have certain rights over [=data=] that is about themselves, and these rights should
+    be facilitated by their [=user agent=] and the [=parties=] that are [=processing=] their
+    [=data=].
+  </span>
+</p>
+
+While data rights alone are not sufficient to satisfy all [=privacy=] principles for the Web, they
+do support self-determination and help improve accountability. Such rights include:
+
+* The <dfn data-export="">right to access</dfn> [=data=] about oneself.
+
+This right includes being able to discover data about oneself (implying no databases are kept
+secret) and to review
+what information has been collected or inferred.
+
+* The <dfn data-export="" data-lt="right to erase">right to erase</dfn> [=data=] about oneself.
+
+The right to erase applies whether or not terminating use of a service altogether, though what
+[=data=] can be erased may differ between those two cases. On the Web, [=people=] may wish to erase
+data on their device, on a server, or both, and the distinctions may not always be clear.
+
+* The <dfn data-export="" data-lt="right to portability" data-local-lt="portability">right to
+port</dfn> [=data=], including data one has stored with a [=party=], so it can easily be reused or
+transferred elsewhere.
+
+Portability is needed to realize the ability for [=people=] to make choices about services with
+different data practices. Standards for interoperability are essential for effective re-use.
+
+* The <dfn data-export="">right to correct</dfn> [=data=] about oneself, to ensure that one's
+[=identity=] is properly reflected in a system.
+
+* The <dfn data-export="">right to be free from automated decision-making</dfn> based on [=data=]
+about oneself.
+
+For some kinds of decision-making with substantial consequences, there is a privacy interest in
+being able to exclude oneself from automated profiling. For example, some services may alter the
+price of products (price discrimination) or offers for credit or insurance based on [=data=]
+collected about a person. Those alterations may be consequential (financially, say) and
+objectionable to people who believe those decisions based on data about them are inaccurate or
+unjust. As another example, some services may draw inferences about a user's identity, humanity or
+presence based on facial recognition algorithms run on camera data. Because facial recognition
+algorithms and training sets are fallible and may exhibit certain biases, people may not wish to
+submit to decisions based on that kind of automated recognition.
+
+* The <dfn data-export=""
+  data-lt="right to object|right to withdraw consent|right to restrict use">right to object,
+withdraw consent, and restrict use</dfn> of data about oneself.
+
+[=People=] may change their decisions about consent or may object to subsequent uses of data about
+themselves. Retaining rights requires ongoing control, not just at the time of collection.
+
+The OECD Privacy Principles [[OECD-Guidelines]], [[Records-Computers-Rights]], and the [[GDPR]],
+among other places, include many of the rights [=people=] have as data subjects. These participatory
+rights by people over data about themselves are inherent to [=autonomy=].
+
 ## De-identified Data {#deidentified-data}
 
 <div class="practice">
 
-<p><span class="practicelab" id="minimal-data-sharing">
-Whenever possible, processors should work with [=data=] that has been [=de-identified=].
-</span></p>
+<p>
+  <span class="practicelab" id="de-identify-data">
+    Whenever possible, processors should work with [=data=] that has been [=de-identified=].
+  </span>
+</p>
 
 </div>
 
