personal data in defs

--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,6 @@ of an event that occurs nearly-simultaneously on both sites.
 <aside class="issue">
 <h4>Pete's Funtime Reference Corral</h4>
 
-* <dfn data-lt="data">personal data</dfn>
 * <dfn data-lt="data processor">service provider</dfn>
 * [=third party=]
 * [[?Privacy-Concerned]]
@@ -1550,6 +1549,13 @@ A <dfn data-lt="third parties">third party</dfn> is any [=party=] other than the
 with.
 
 ## Acting on Data {#acting-on-data}
+
+We define <dfn data-lt="data">personal data</dfn> as any information that is directly or
+indirectly related to an identified or identifiable [=person=], such as by reference to an
+[=identifier=] ([[GDPR]], [[OECD-Guidelines]], [[Convention-108]]).
+
+If a [=person=] could reasonably be identified or re-identified when [=data=] is combined with other
+[=data=], then that makes that data [=personal data=].
 
 <dfn>Privacy</dfn> is achieved in a given [=context=] that either involves [=personal data=] or
 involves information being presented to [=people=] when the [=principles=] of that [=context=] are
