vegas with parties as that is the framework in which it is meaningful

--- a/index.html
+++ b/index.html
@@ -1546,6 +1546,14 @@ A <dfn data-lt="third parties">third party</dfn> is any [=party=] other than the
 [=person=] visiting the website or the [=first parties=] they expect to be interacting
 with.
 
+The <dfn>Vegas Rule</dfn> is a simple implementation of privacy in which "<i>what happens with the
+[=first party=] stays with the [=first party=]</i>." Put differently, the [=Vegas Rule=] is followed
+when the [=first party=] is the only [=data controller=]. While the [=Vegas Rule=] is a good
+guideline, it's neither necessary nor sufficient for [=appropriate=] [=data processing=]. A [=first
+party=] that maintains exclusive access to a person's data can still [=process=] it
+[=inappropriately=], and there are cases where a third party can learn information about a person
+but still treat it [=appropriately=].
+
 ## Acting on Data {#acting-on-data}
 
 We define <dfn data-lt="data">personal data</dfn> as any information that is directly or
