bring back concern

--- a/index.html
+++ b/index.html
@@ -480,9 +480,11 @@ that may impact [=autonomy=] should be the subject of independent scrutiny.
 
 Given the large volume of potential [=data=]-related decisions in today's data economy,
 complete informational self-determination is impossible. This fact, however, should not be
-confused with the idea that privacy is dead. Careful design of our technological
-infrastructure can ensure that people's [=autonomy=] with respect to their own [=data=]
-is enhanced through [=appropriate=] defaults and choice architectures.
+confused with the idea that privacy is dead. Studies show that [=people=] remain concerned over how
+their [=data=] is [=processed=], feeling powerless and like they have lost agency
+([[?Privacy-Concerned]]). Careful design of our technological infrastructure can ensure that
+people's [=autonomy=] with respect to their own [=data=] is enhanced through [=appropriate=]
+defaults and choice architectures.
 
 ### Opt-in, Consent, Opt-out, Global Controls {#opt-in-out}
 
@@ -1028,13 +1030,6 @@ of an event that occurs nearly-simultaneously on both sites.
 
 
 ## Principles for Personal Data {#data}
-
-<aside class="issue">
-<h4>Pete's Funtime Reference Corral</h4>
-
-* [[?Privacy-Concerned]]
-
-</aside>
 
 <aside class="issue">
   This section has not been edited for narrative.
